# CrashExporter

./: .gitignore  CMakeLists.txt  README.md  README_CMAKE.md
Tests/: CrashExporterTests.cpp
prj_win/: CrashExporter.sln  CrashExporter.vcxproj  CrashRpt.vcxproj
src/crashExporter/: CrashInfoReader.cpp  CrashInfoReader.h  ErrorReportExporter.cpp  ErrorReportExporter.h  ScreenCap.h  stdafx.h
src/crashrpt/: CrashHandler.cpp  CrashHandler.h  CritSec.h  SharedMem.h  StackWalker.h  StdAfx.h  Utility.cpp  Utility.h  strconv.h
